--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,18 @@
+body {
+  background: #f5f5f5;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
+.loading {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 10vmin;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,6 +23,18 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.main {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+.main > div {
+  max-width: 50%;
+  background: #fff;
+  padding: 20px;
+  margin-top: 50px;
 }
 
 @keyframes App-logo-spin {
